Tests de Loans y correccion Endpoints Get y Patch